// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify render tests actions should render sign out action 1`] = `
Object {
  "componentText": "/* eslint-disable */
import React from \\"react\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  Flex,
  FlexProps,
  Heading,
  HeadingProps,
  findChildOverrides,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type SiteHeaderProps = Partial<FlexProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function SiteHeader(props: SiteHeaderProps): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  const { invokeAction } = useActions({
    signOutAction: {
      type: \\"Amplify.Auth.SignOut\\",
      parameters: { global: true },
    },
  });
  return (
    <Flex
      direction=\\"row\\"
      justifyContent=\\"space-between\\"
      {...rest}
      {...getOverrideProps(overrides, \\"Flex\\")}
    >
      <Heading
        level={1}
        children=\\"Title\\"
        {...findChildOverrides(props.overrides, \\"Heading\\")}
      ></Heading>
      <Button
        variation=\\"primary\\"
        children=\\"Log off\\"
        onClick={invokeAction(\\"signOutAction\\")}
        {...getOverrideProps(overrides, \\"Flex.Button\\")}
      ></Button>
    </Flex>
  );
}
",
  "declaration": undefined,
  "renderComponentToFilesystem": [Function],
}
`;

exports[`amplify render tests basic component tests should generate a simple button component 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type CustomButtonProps = Partial<ButtonProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function CustomButton(
  props: CustomButtonProps
): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Button
      color=\\"#ff0000\\"
      width={20}
      {...rest}
      {...getOverrideProps(overrides, \\"Button\\")}
    ></Button>
  );
}
"
`;

exports[`amplify render tests basic component tests should generate a simple text component 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  EscapeHatchProps,
  Text,
  TextProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type CustomTextProps = Partial<TextProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function CustomText(props: CustomTextProps): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Text
      color=\\"#ff0000\\"
      width=\\"20px\\"
      {...rest}
      {...getOverrideProps(overrides, \\"Text\\")}
    >
      {\\"Text Value\\"}
    </Text>
  );
}
"
`;

exports[`amplify render tests basic component tests should generate a simple view component 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  EscapeHatchProps,
  View,
  ViewProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type TestProps = Partial<ViewProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function Test(props: TestProps): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <View
      fontFamily=\\"Times New Roman\\"
      fontSize=\\"20px\\"
      {...rest}
      {...getOverrideProps(overrides, \\"View\\")}
    ></View>
  );
}
"
`;

exports[`amplify render tests collection should render collection with data binding 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import { User, UserPreferences } from \\"../models\\";
import {
  Button,
  ButtonProps,
  Collection,
  CollectionProps,
  EscapeHatchProps,
  Flex,
  FlexProps,
  getOverrideProps,
  useDataStoreBinding,
} from \\"@aws-amplify/ui-react\\";

export type CollectionOfCustomButtonsProps = Partial<CollectionProps<any>> & {
  width?: Number;
  backgroundColor?: String;
  buttonColor?: UserPreferences;
  items?: any[];
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function CollectionOfCustomButtons(
  props: CollectionOfCustomButtonsProps
): React.ReactElement {
  const {
    width,
    backgroundColor,
    buttonColor: buttonColorProp,
    items,
    overrides: overridesProp,
    ...rest
  } = props;
  const overrides = { ...overridesProp };
  const buttonUserFilterObj = {
    and: [
      { field: \\"age\\", operand: \\"10\\", operator: \\"gt\\" },
      { field: \\"lastName\\", operand: \\"L\\", operator: \\"beginsWith\\" },
    ],
  };
  const buttonUser =
    items !== undefined
      ? items
      : useDataStoreBinding({
          type: \\"collection\\",
          model: User,
        }).items;
  const buttonColorFilterObj = {
    field: \\"userID\\",
    operand: \\"user@email.com\\",
    operator: \\"eq\\",
  };
  const buttonColorDataStore = useDataStoreBinding({
    type: \\"collection\\",
    model: UserPreferences,
  }).items[0];
  const buttonColor =
    buttonColorProp !== undefined ? buttonColorProp : buttonColorDataStore;
  return (
    <Collection
      type=\\"list\\"
      isPaginated={true}
      gap=\\"1.5rem\\"
      backgroundColor={backgroundColor}
      items={buttonUser || []}
      {...rest}
      {...getOverrideProps(overrides, \\"Collection\\")}
    >
      {(item, index) => (
        <Flex {...getOverrideProps(overrides, \\"Collection.Flex\\")}>
          <Button
            label={item.username || \\"hspain@gmail.com\\"}
            labelWidth={width}
            backgroundColor={buttonColor?.favoriteColor}
            disabled={isDisabled}
            {...getOverrideProps(overrides, \\"Collection.Flex.Button\\")}
          ></Button>
        </Flex>
      )}
    </Collection>
  );
}
"
`;

exports[`amplify render tests collection should render collection with data binding and sort 1`] = `
Object {
  "componentText": "/* eslint-disable */
import React from \\"react\\";
import { User, UserPreferences } from \\"../models\\";
import {
  Button,
  ButtonProps,
  Collection,
  CollectionProps,
  EscapeHatchProps,
  Flex,
  FlexProps,
  getOverrideProps,
  useDataStoreBinding,
} from \\"@aws-amplify/ui-react\\";
import { SortDirection, SortPredicate } from \\"@aws-amplify/datastore\\";

export type CollectionOfCustomButtonsProps = Partial<CollectionProps<any>> & {
  width?: Number;
  backgroundColor?: String;
  buttonColor?: UserPreferences;
  items?: any[];
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function CollectionOfCustomButtons(
  props: CollectionOfCustomButtonsProps
): React.ReactElement {
  const {
    width,
    backgroundColor,
    buttonColor: buttonColorProp,
    items,
    overrides: overridesProp,
    ...rest
  } = props;
  const overrides = { ...overridesProp };
  const buttonUserFilterObj = {
    and: [
      { field: \\"age\\", operand: \\"10\\", operator: \\"gt\\" },
      { field: \\"lastName\\", operand: \\"L\\", operator: \\"beginsWith\\" },
    ],
  };
  const buttonUserPagination = {
    sort: (s: SortPredicate<User>) =>
      s.firstName(SortDirection.ASCENDING).lastName(SortDirection.DESCENDING),
  };
  const buttonUser =
    items !== undefined
      ? items
      : useDataStoreBinding({
          type: \\"collection\\",
          model: User,
          pagination: buttonUserPagination,
        }).items;
  const buttonColorFilterObj = {
    field: \\"userID\\",
    operand: \\"user@email.com\\",
    operator: \\"eq\\",
  };
  const buttonColorDataStore = useDataStoreBinding({
    type: \\"collection\\",
    model: UserPreferences,
  }).items[0];
  const buttonColor =
    buttonColorProp !== undefined ? buttonColorProp : buttonColorDataStore;
  return (
    <Collection
      type=\\"list\\"
      isPaginated={true}
      gap=\\"1.5rem\\"
      backgroundColor={backgroundColor}
      items={buttonUser || []}
      {...rest}
      {...getOverrideProps(overrides, \\"Collection\\")}
    >
      {(item, index) => (
        <Flex {...getOverrideProps(overrides, \\"Collection.Flex\\")}>
          <Button
            label={item.username || \\"hspain@gmail.com\\"}
            labelWidth={width}
            backgroundColor={buttonColor?.favoriteColor}
            disabled={isDisabled}
            {...getOverrideProps(overrides, \\"Collection.Flex.Button\\")}
          ></Button>
        </Flex>
      )}
    </Collection>
  );
}
",
  "declaration": undefined,
  "renderComponentToFilesystem": [Function],
}
`;

exports[`amplify render tests collection should render collection with data binding if binding name is items 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import { User, UserPreferences } from \\"../models\\";
import {
  Button,
  ButtonProps,
  Collection,
  CollectionProps,
  EscapeHatchProps,
  Flex,
  FlexProps,
  getOverrideProps,
  useDataStoreBinding,
} from \\"@aws-amplify/ui-react\\";

export type CollectionOfCustomButtonsProps = Partial<CollectionProps<any>> & {
  width?: Number;
  backgroundColor?: String;
  buttonColor?: UserPreferences;
  items?: any[];
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function CollectionOfCustomButtons(
  props: CollectionOfCustomButtonsProps
): React.ReactElement {
  const {
    width,
    backgroundColor,
    buttonColor: buttonColorProp,
    items: itemsProp,
    overrides: overridesProp,
    ...rest
  } = props;
  const overrides = { ...overridesProp };
  const itemsFilterObj = {
    and: [
      { field: \\"age\\", operand: \\"10\\", operator: \\"gt\\" },
      { field: \\"lastName\\", operand: \\"L\\", operator: \\"beginsWith\\" },
    ],
  };
  const items =
    itemsProp !== undefined
      ? itemsProp
      : useDataStoreBinding({
          type: \\"collection\\",
          model: User,
        }).items;
  const buttonColorFilterObj = {
    field: \\"userID\\",
    operand: \\"user@email.com\\",
    operator: \\"eq\\",
  };
  const buttonColorDataStore = useDataStoreBinding({
    type: \\"collection\\",
    model: UserPreferences,
  }).items[0];
  const buttonColor =
    buttonColorProp !== undefined ? buttonColorProp : buttonColorDataStore;
  return (
    <Collection
      type=\\"list\\"
      isPaginated={true}
      gap=\\"1.5rem\\"
      backgroundColor={backgroundColor}
      items={items || []}
      {...rest}
      {...getOverrideProps(overrides, \\"Collection\\")}
    >
      {(item, index) => (
        <Flex {...getOverrideProps(overrides, \\"Collection.Flex\\")}>
          <Button
            label={item.username || \\"hspain@gmail.com\\"}
            labelWidth={width}
            backgroundColor={buttonColor?.favoriteColor}
            disabled={isDisabled}
            {...getOverrideProps(overrides, \\"Collection.Flex.Button\\")}
          ></Button>
        </Flex>
      )}
    </Collection>
  );
}
"
`;

exports[`amplify render tests collection should render collection with data binding with no predicate 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Collection,
  CollectionProps,
  EscapeHatchProps,
  ListingCard,
  ListingCardProps,
  findChildOverrides,
  getOverrideProps,
  useDataStoreBinding,
} from \\"@aws-amplify/ui-react\\";
import { UntitledModel } from \\"../models\\";

export type ListingCardCollectionProps = Partial<CollectionProps<any>> & {
  items?: any[];
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function ListingCardCollection(
  props: ListingCardCollectionProps
): React.ReactElement {
  const { items, overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  const bananas =
    items !== undefined
      ? items
      : useDataStoreBinding({
          type: \\"collection\\",
          model: UntitledModel,
        }).items;
  return (
    <Collection
      isPaginated=\\"true\\"
      collectionType=\\"grid\\"
      type=\\"list\\"
      columns=\\"2\\"
      order=\\"left-to-right\\"
      items={bananas || []}
      {...rest}
      {...getOverrideProps(overrides, \\"Collection\\")}
    >
      {(item, index) => (
        <ListingCard
          marginRight=\\"0\\"
          marginBottom=\\"0\\"
          marginTop=\\"0\\"
          marginLeft=\\"0\\"
          {...findChildOverrides(props.overrides, \\"ListingCard\\")}
        ></ListingCard>
      )}
    </Collection>
  );
}
"
`;

exports[`amplify render tests collection should render collection without data binding 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Collection,
  CollectionProps,
  EscapeHatchProps,
  ListingCard,
  ListingCardProps,
  findChildOverrides,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type ListingCardCollectionProps = Partial<CollectionProps<any>> & {
  items?: any[];
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function ListingCardCollection(
  props: ListingCardCollectionProps
): React.ReactElement {
  const { items, overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Collection
      type=\\"list\\"
      isPaginated=\\"true\\"
      items={items || []}
      {...rest}
      {...getOverrideProps(overrides, \\"Collection\\")}
    >
      {(item, index) => (
        <ListingCard
          {...findChildOverrides(props.overrides, \\"ListingCard\\")}
        ></ListingCard>
      )}
    </Collection>
  );
}
"
`;

exports[`amplify render tests complex component tests should generate a button within a view component 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  View,
  ViewProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type ViewWithButtonProps = Partial<ViewProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function ViewWithButton(
  props: ViewWithButtonProps
): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <View {...rest} {...getOverrideProps(overrides, \\"View\\")}>
      <Button
        color=\\"#ff0000\\"
        width=\\"20px\\"
        {...getOverrideProps(overrides, \\"View.Button\\")}
      ></Button>
    </View>
  );
}
"
`;

exports[`amplify render tests complex component tests should generate a component with custom child 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  CustomButton,
  CustomButtonProps,
  EscapeHatchProps,
  View,
  ViewProps,
  findChildOverrides,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type ViewWithCustomButtonProps = Partial<ViewProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function ViewWithCustomButton(
  props: ViewWithCustomButtonProps
): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <View {...rest} {...getOverrideProps(overrides, \\"View\\")}>
      <CustomButton
        color=\\"#ff0000\\"
        width=\\"20px\\"
        {...findChildOverrides(props.overrides, \\"CustomButton\\")}
      ></CustomButton>
    </View>
  );
}
"
`;

exports[`amplify render tests complex component tests should generate a component with exposeAs prop 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  View,
  ViewProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type ViewWithButtonProps = Partial<ViewProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function ViewWithButton(
  props: ViewWithButtonProps
): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <View {...rest} {...getOverrideProps(overrides, \\"View\\")}>
      <Button
        color=\\"#ff0000\\"
        width=\\"20px\\"
        {...getOverrideProps(overrides, \\"View.Button\\")}
      ></Button>
    </View>
  );
}
"
`;

exports[`amplify render tests complex examples should render complex sample 1 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  EscapeHatchProps,
  Flex,
  FlexProps,
  Text,
  TextProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type HiProps = Partial<FlexProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function Hi(props: HiProps): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Flex
      padding=\\"34px 56px 34px 56px\\"
      backgroundColor=\\"rgb(255,255,255)\\"
      overflow=\\"hidden\\"
      alignItems=\\"flex-start\\"
      gap=\\"10px\\"
      position=\\"relative\\"
      direction=\\"row\\"
      {...rest}
      {...getOverrideProps(overrides, \\"Flex\\")}
    >
      <Text
        padding=\\"0px 0px 0px 0px\\"
        fontFamily=\\"Roboto\\"
        color=\\"rgb(0,0,0)\\"
        textAlign=\\"left\\"
        width=\\"52px\\"
        fontSize=\\"12px\\"
        lineHeight=\\"14.0625px\\"
        position=\\"relative\\"
        fontWeight=\\"400\\"
        height=\\"14px\\"
        {...getOverrideProps(overrides, \\"Flex.Text\\")}
      >
        {\\"Hi harriso\\"}
      </Text>
    </Flex>
  );
}
"
`;

exports[`amplify render tests complex examples should render complex sample 2 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Box,
  BoxProps,
  EscapeHatchProps,
  Flex,
  FlexProps,
  findChildOverrides,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type VerticalFlexFixedProps = Partial<FlexProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function VerticalFlexFixed(
  props: VerticalFlexFixedProps
): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Flex
      padding=\\"0px 0px 0px 0px\\"
      backgroundColor=\\"rgb(255,255,255)\\"
      alignItems=\\"flex-start\\"
      gap=\\"0\\"
      width=\\"153px\\"
      position=\\"relative\\"
      direction=\\"row\\"
      height=\\"289px\\"
      {...rest}
      {...getOverrideProps(overrides, \\"Flex\\")}
    >
      <Flex
        padding=\\"10px 10px 10px 10px\\"
        alignSelf=\\"stretch\\"
        flexGrow=\\"1\\"
        overflow=\\"hidden\\"
        gap=\\"10px\\"
        width=\\"100%\\"
        position=\\"relative\\"
        height=\\"100%\\"
        direction=\\"column\\"
        {...getOverrideProps(overrides, \\"Flex.Flex\\")}
      >
        <Box
          width=\\"123px\\"
          padding=\\"0px 0px 0px 0px\\"
          backgroundColor=\\"rgb(255,0,0)\\"
          position=\\"relative\\"
          src=\\"https://via.placeholder.com/153x289?text=Amplify+Studio+is+Awesome!\\"
          height=\\"125px\\"
          {...findChildOverrides(props.overrides, \\"Box\\")}
        ></Box>
        <Box
          width=\\"123px\\"
          padding=\\"0px 0px 0px 0px\\"
          backgroundColor=\\"rgb(219.30000364780426,255,0)\\"
          position=\\"relative\\"
          src=\\"https://via.placeholder.com/153x289?text=Amplify+Studio+is+Awesome!\\"
          height=\\"122px\\"
          {...findChildOverrides(props.overrides, \\"Box\\")}
        ></Box>
      </Flex>
    </Flex>
  );
}
"
`;

exports[`amplify render tests complex examples should render complex sample 3 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Box,
  BoxProps,
  EscapeHatchProps,
  Flex,
  FlexProps,
  ReneButton,
  ReneButtonProps,
  Text,
  TextProps,
  findChildOverrides,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type NewComponentProps = Partial<FlexProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function NewComponent(
  props: NewComponentProps
): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Flex
      padding=\\"20px 20px 20px 20px\\"
      backgroundColor=\\"rgb(255,255,255)\\"
      overflow=\\"hidden\\"
      alignItems=\\"center\\"
      gap=\\"80px\\"
      position=\\"relative\\"
      justifyContent=\\"center\\"
      direction=\\"column\\"
      {...rest}
      {...getOverrideProps(overrides, \\"Flex\\")}
    >
      <Text
        padding=\\"0px 0px 0px 0px\\"
        fontFamily=\\"Inter\\"
        color=\\"rgb(0,0,0)\\"
        textAlign=\\"left\\"
        width=\\"146px\\"
        fontSize=\\"24px\\"
        lineHeight=\\"28.80000114440918px\\"
        position=\\"relative\\"
        fontWeight=\\"400\\"
        height=\\"29px\\"
        {...getOverrideProps(overrides, \\"Flex.Text\\")}
      >
        {\\"Hello World!\\"}
      </Text>
      <Box
        width=\\"390px\\"
        padding=\\"0px 0px 0px 0px\\"
        backgroundColor=\\"rgb(196.00000351667404,196.00000351667404,196.00000351667404)\\"
        position=\\"relative\\"
        src=\\"https://via.placeholder.com/430x452?text=Amplify+Studio+is+Awesome!\\"
        height=\\"69px\\"
        {...findChildOverrides(props.overrides, \\"Box\\")}
      ></Box>
      <ReneButton
        width=\\"293px\\"
        height=\\"45px\\"
        {...findChildOverrides(props.overrides, \\"ReneButton\\")}
      ></ReneButton>
      <Text
        padding=\\"0px 0px 0px 0px\\"
        fontFamily=\\"Inter\\"
        color=\\"rgb(0,0,0)\\"
        textAlign=\\"left\\"
        width=\\"138px\\"
        fontSize=\\"24px\\"
        lineHeight=\\"28.80000114440918px\\"
        position=\\"relative\\"
        fontWeight=\\"400\\"
        height=\\"29px\\"
        {...getOverrideProps(overrides, \\"Flex.Text\\")}
      >
        {\\"Testing 123\\"}
      </Text>
    </Flex>
  );
}
"
`;

exports[`amplify render tests complex examples should render complex sample 4 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Box,
  BoxProps,
  EscapeHatchProps,
  Flex,
  FlexProps,
  Variant,
  findChildOverrides,
  getOverrideProps,
  getOverridesFromVariants,
} from \\"@aws-amplify/ui-react\\";

export type GroupReferenceProps = Partial<FlexProps> & {
  colors?: \\"Red/Orange\\";
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function GroupReference(
  props: GroupReferenceProps
): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const variants: Variant[] = [
    {
      overrides: {
        Flex: {
          padding: \\"10px 10px 10px 10px\\",
          backgroundColor: \\"rgb(255,255,255)\\",
          overflow: \\"hidden\\",
          alignItems: \\"flex-start\\",
          gap: \\"10px\\",
          position: \\"relative\\",
          direction: \\"row\\",
        },
        \\"Flex.Flex.Box[1]\\": {
          padding: \\"0px 0px 0px 0px\\",
          backgroundColor: \\"rgb(255,153.00000607967377,0)\\",
          top: \\"1px\\",
          left: \\"203px\\",
          src: \\"https://via.placeholder.com/323x123?text=Amplify+Studio+is+Awesome!\\",
          width: \\"120px\\",
          position: \\"absolute\\",
          height: \\"122px\\",
        },
        \\"Flex.Flex.Box[0]\\": {
          padding: \\"0px 0px 0px 0px\\",
          backgroundColor: \\"rgb(255,0,0)\\",
          top: \\"0px\\",
          left: \\"0px\\",
          src: \\"https://via.placeholder.com/323x123?text=Amplify+Studio+is+Awesome!\\",
          width: \\"122px\\",
          position: \\"absolute\\",
          height: \\"123px\\",
        },
        \\"Flex.Flex[0]\\": {
          width: \\"323px\\",
          padding: \\"0px 0px 0px 0px\\",
          position: \\"relative\\",
          height: \\"123px\\",
        },
      },
      variantValues: { colors: \\"Red/Orange\\" },
    },
  ];
  const overrides = {
    ...getOverridesFromVariants(variants, props),
    ...overridesProp,
  };
  return (
    <Flex
      padding=\\"10px 10px 10px 10px\\"
      backgroundColor=\\"rgb(255,255,255)\\"
      overflow=\\"hidden\\"
      alignItems=\\"flex-start\\"
      gap=\\"10px\\"
      position=\\"relative\\"
      direction=\\"row\\"
      {...rest}
      {...getOverrideProps(overrides, \\"Flex\\")}
    >
      <Flex
        width=\\"323px\\"
        padding=\\"0px 0px 0px 0px\\"
        position=\\"relative\\"
        height=\\"123px\\"
        {...getOverrideProps(overrides, \\"Flex.Flex\\")}
      >
        <Box
          padding=\\"0px 0px 0px 0px\\"
          backgroundColor=\\"rgb(35.699965953826904,0,255)\\"
          top=\\"0px\\"
          left=\\"0px\\"
          src=\\"https://via.placeholder.com/323x123?text=Amplify+Studio+is+Awesome!\\"
          width=\\"122px\\"
          position=\\"absolute\\"
          height=\\"123px\\"
          {...findChildOverrides(props.overrides, \\"Box\\")}
        ></Box>
        <Box
          padding=\\"0px 0px 0px 0px\\"
          backgroundColor=\\"rgb(0,255,25.49997568130493)\\"
          top=\\"1px\\"
          left=\\"203px\\"
          src=\\"https://via.placeholder.com/323x123?text=Amplify+Studio+is+Awesome!\\"
          width=\\"120px\\"
          position=\\"absolute\\"
          height=\\"122px\\"
          {...findChildOverrides(props.overrides, \\"Box\\")}
        ></Box>
      </Flex>
    </Flex>
  );
}
"
`;

exports[`amplify render tests complex examples should render complex sample 5 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Box,
  BoxProps,
  EscapeHatchProps,
  Flex,
  FlexProps,
  findChildOverrides,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type FlexTestProps = Partial<FlexProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function FlexTest(props: FlexTestProps): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Flex
      padding=\\"0px 0px 0px 0px\\"
      backgroundColor=\\"rgb(255,255,255)\\"
      position=\\"relative\\"
      alignItems=\\"flex-start\\"
      gap=\\"0\\"
      direction=\\"row\\"
      {...rest}
      {...getOverrideProps(overrides, \\"Flex\\")}
    >
      <Box
        width=\\"120px\\"
        padding=\\"0px 0px 0px 0px\\"
        backgroundColor=\\"rgb(35.699965953826904,0,255)\\"
        position=\\"relative\\"
        src=\\"https://via.placeholder.com/240x120?text=Amplify+Studio+is+Awesome!\\"
        height=\\"120px\\"
        {...findChildOverrides(props.overrides, \\"Box\\")}
      ></Box>
      <Box
        width=\\"120px\\"
        padding=\\"0px 0px 0px 0px\\"
        backgroundColor=\\"rgb(0,255,25.49997568130493)\\"
        position=\\"relative\\"
        src=\\"https://via.placeholder.com/240x120?text=Amplify+Studio+is+Awesome!\\"
        height=\\"120px\\"
        {...findChildOverrides(props.overrides, \\"Box\\")}
      ></Box>
    </Flex>
  );
}
"
`;

exports[`amplify render tests complex examples should render complex sample 6 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  EscapeHatchProps,
  Flex,
  FlexProps,
  Text,
  TextProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type MohitHomeProps = Partial<FlexProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function MohitHome(props: MohitHomeProps): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Flex
      padding=\\"21px 42px 21px 42px\\"
      backgroundColor=\\"rgb(255,255,255)\\"
      overflow=\\"hidden\\"
      position=\\"relative\\"
      gap=\\"22px\\"
      direction=\\"column\\"
      {...rest}
      {...getOverrideProps(overrides, \\"Flex\\")}
    >
      <Text
        padding=\\"0px 0px 0px 0px\\"
        fontFamily=\\"Inter\\"
        color=\\"rgb(0,0,0)\\"
        textAlign=\\"left\\"
        width=\\"68px\\"
        fontSize=\\"24px\\"
        lineHeight=\\"28.125px\\"
        position=\\"relative\\"
        fontWeight=\\"700\\"
        height=\\"29px\\"
        {...getOverrideProps(overrides, \\"Flex.Text\\")}
      >
        {\\"Name\\"}
      </Text>
      <Text
        padding=\\"0px 0px 0px 0px\\"
        fontFamily=\\"Roboto\\"
        color=\\"rgb(0,0,0)\\"
        textAlign=\\"left\\"
        width=\\"83px\\"
        fontSize=\\"12px\\"
        lineHeight=\\"14.0625px\\"
        position=\\"relative\\"
        fontWeight=\\"400\\"
        height=\\"14px\\"
        {...getOverrideProps(overrides, \\"Flex.Text\\")}
      >
        {\\"Price / Address\\"}
      </Text>
      <Text
        padding=\\"0px 0px 0px 0px\\"
        fontFamily=\\"Roboto\\"
        color=\\"rgb(0,0,0)\\"
        textAlign=\\"left\\"
        width=\\"23px\\"
        fontSize=\\"12px\\"
        lineHeight=\\"14.0625px\\"
        position=\\"relative\\"
        fontWeight=\\"400\\"
        height=\\"14px\\"
        {...getOverrideProps(overrides, \\"Flex.Text\\")}
      >
        {\\"Sqft\\"}
      </Text>
    </Flex>
  );
}
"
`;

exports[`amplify render tests complex examples should render complex sample 7 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Box,
  BoxProps,
  EscapeHatchProps,
  Image,
  ImageProps,
  Text,
  TextProps,
  findChildOverrides,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type ImageFlexProps = Partial<BoxProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function ImageFlex(props: ImageFlexProps): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Box
      width=\\"401px\\"
      padding=\\"0px 0px 0px 0px\\"
      position=\\"relative\\"
      height=\\"192px\\"
      {...findChildOverrides(props.overrides, \\"Box\\")}
    >
      <Image
        border=\\"4px SOLID rgb(0,0,0)\\"
        padding=\\"0px 0px 0px 0px\\"
        top=\\"0px\\"
        borderRadius=\\"45px\\"
        left=\\"254.15074157714844px\\"
        src=\\"https://via.placeholder.com/401x192?text=Amplify+Studio+is+Awesome!\\"
        width=\\"150.84925842285156px\\"
        position=\\"absolute\\"
        height=\\"196px\\"
        {...getOverrideProps(overrides, \\"Box.Image\\")}
      ></Image>
      <Text
        padding=\\"0px 0px 0px 0px\\"
        color=\\"rgb(0,0,0)\\"
        textAlign=\\"left\\"
        fontFamily=\\"Inter\\"
        top=\\"0px\\"
        left=\\"187.4011993408203px\\"
        width=\\"54.426666259765625px\\"
        fontSize=\\"24px\\"
        lineHeight=\\"28.80000114440918px\\"
        position=\\"absolute\\"
        fontWeight=\\"400\\"
        height=\\"27.839996337890625px\\"
        {...getOverrideProps(overrides, \\"Box.Text\\")}
      >
        {\\"Test\\"}
      </Text>
      <Image
        border=\\"4px SOLID rgb(0,0,0)\\"
        padding=\\"0px 0px 0px 0px\\"
        top=\\"0px\\"
        borderRadius=\\"27px\\"
        left=\\"0px\\"
        src=\\"https://via.placeholder.com/401x192?text=Amplify+Studio+is+Awesome!\\"
        width=\\"169.42330932617188px\\"
        position=\\"absolute\\"
        height=\\"189.0880126953125px\\"
        {...getOverrideProps(overrides, \\"Box.Image\\")}
      ></Image>
    </Box>
  );
}
"
`;

exports[`amplify render tests complex examples should render complex sample 8 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Box,
  BoxProps,
  EscapeHatchProps,
  Flex,
  FlexProps,
  findChildOverrides,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type VerticalFlexFillProps = Partial<FlexProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function VerticalFlexFill(
  props: VerticalFlexFillProps
): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Flex
      padding=\\"0px 0px 0px 0px\\"
      backgroundColor=\\"rgb(255,255,255)\\"
      alignItems=\\"flex-start\\"
      gap=\\"0\\"
      width=\\"145px\\"
      position=\\"relative\\"
      direction=\\"row\\"
      height=\\"243px\\"
      {...rest}
      {...getOverrideProps(overrides, \\"Flex\\")}
    >
      <Flex
        padding=\\"0px 0px 0px 0px\\"
        flexGrow=\\"0\\"
        gap=\\"0\\"
        width=\\"472px\\"
        position=\\"relative\\"
        height=\\"723px\\"
        direction=\\"column\\"
        {...getOverrideProps(overrides, \\"Flex.Flex\\")}
      >
        <Box
          width=\\"145px\\"
          padding=\\"0px 0px 0px 0px\\"
          backgroundColor=\\"rgb(219.30000364780426,255,0)\\"
          position=\\"relative\\"
          src=\\"https://via.placeholder.com/472x723?text=Amplify+Studio+is+Awesome!\\"
          height=\\"119px\\"
          {...findChildOverrides(props.overrides, \\"Box\\")}
        ></Box>
        <Box
          width=\\"145px\\"
          padding=\\"0px 0px 0px 0px\\"
          backgroundColor=\\"rgb(255,0,0)\\"
          position=\\"relative\\"
          src=\\"https://via.placeholder.com/472x723?text=Amplify+Studio+is+Awesome!\\"
          height=\\"124px\\"
          {...findChildOverrides(props.overrides, \\"Box\\")}
        ></Box>
      </Flex>
    </Flex>
  );
}
"
`;

exports[`amplify render tests component with binding should render build property on Text 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  EscapeHatchProps,
  Text,
  TextProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type TextWithDataBindingProps = Partial<TextProps> & {
  textValue?: String;
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function TextWithDataBinding(
  props: TextWithDataBindingProps
): React.ReactElement {
  const { textValue, overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Text
      color=\\"#ff0000\\"
      width=\\"20px\\"
      {...rest}
      {...getOverrideProps(overrides, \\"Text\\")}
    >
      {textValue}
    </Text>
  );
}
"
`;

exports[`amplify render tests component with data binding should add model imports 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import { User } from \\"../models\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type ComponentWithDataBindingProps = Partial<ButtonProps> & {
  width?: Number;
  isDisabled?: Boolean;
  buttonUser?: User;
  buttonColor?: String;
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function ComponentWithDataBinding(
  props: ComponentWithDataBindingProps
): React.ReactElement {
  const {
    width,
    isDisabled,
    buttonUser,
    buttonColor,
    overrides: overridesProp,
    ...rest
  } = props;
  const overrides = { ...overridesProp };
  return (
    <Button
      label={buttonUser?.username || \\"hspain@gmail.com\\"}
      labelWidth={width}
      disabled={isDisabled}
      {...rest}
      {...getOverrideProps(overrides, \\"Button\\")}
    ></Button>
  );
}
"
`;

exports[`amplify render tests component with data binding should not have useDataStoreBinding when there is no predicate 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import { UntitledModel } from \\"../models\\";
import {
  EscapeHatchProps,
  Flex,
  FlexProps,
  Text,
  TextProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type SectionHeadingProps = Partial<FlexProps> & {
  newProp6fd1?: UntitledModel;
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function SectionHeading(
  props: SectionHeadingProps
): React.ReactElement {
  const { newProp6fd1, overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Flex
      padding=\\"0px 0px 10px 0px\\"
      backgroundColor=\\"rgb(255,255,255)\\"
      direction=\\"column\\"
      {...rest}
      {...getOverrideProps(overrides, \\"Flex\\")}
    >
      <Flex
        tes={newProp6fd1.untitledfield}
        {...getOverrideProps(overrides, \\"Flex.Flex\\")}
      >
        <Text
          fontFamily=\\"Inter\\"
          color=\\"rgb(15.539060980081558,29.73937589675188,47.8125)\\"
          textAlign=\\"left\\"
          fontSize=\\"48px\\"
          lineHeight=\\"48px\\"
          fontWeight=\\"300\\"
          {...getOverrideProps(overrides, \\"Flex.Flex.Text\\")}
        >
          {\\"Heading 2\\"}
        </Text>
      </Flex>
      <Text
        fontFamily=\\"Inter\\"
        color=\\"rgb(0,0,0)\\"
        textAlign=\\"left\\"
        fontSize=\\"32px\\"
        lineHeight=\\"48px\\"
        fontWeight=\\"400\\"
        {...getOverrideProps(overrides, \\"Flex.Text\\")}
      >
        {\\"subtitle\\"}
      </Text>
    </Flex>
  );
}
"
`;

exports[`amplify render tests component with data binding should render with data binding in child elements 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  Text,
  TextProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type ChildComponentWithDataBindingProps = Partial<ButtonProps> & {
  textValue?: String;
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function ChildComponentWithDataBinding(
  props: ChildComponentWithDataBindingProps
): React.ReactElement {
  const { textValue, overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Button {...rest} {...getOverrideProps(overrides, \\"Button\\")}>
      <Text {...getOverrideProps(overrides, \\"Button.Text\\")}>{textValue}</Text>
    </Button>
  );
}
"
`;

exports[`amplify render tests component with variants should render variants with options provided 1`] = `
Object {
  "componentText": "/* eslint-disable */
import React from \\"react\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  Variant,
  getOverrideProps,
  getOverridesFromVariants,
} from \\"@aws-amplify/ui-react\\";

export type CustomButtonProps = Partial<ButtonProps> & {
  variant?: \\"primary\\" | \\"secondary\\";
  size?: \\"large\\";
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function CustomButton(
  props: CustomButtonProps
): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const variants: Variant[] = [
    {
      variantValues: { variant: \\"primary\\" },
      overrides: { Button: { fontSize: \\"12px\\" } },
    },
    {
      variantValues: { variant: \\"secondary\\" },
      overrides: {
        Button: { fontSize: \\"40px\\" },
        \\"Button.Text\\": { fontSize: \\"40px\\" },
      },
    },
    {
      variantValues: { variant: \\"primary\\", size: \\"large\\" },
      overrides: { Button: { width: \\"500\\" } },
    },
  ];
  const overrides = {
    ...getOverridesFromVariants(variants, props),
    ...overridesProp,
  };
  return <Button {...rest} {...getOverrideProps(overrides, \\"Button\\")}></Button>;
}
",
  "declaration": undefined,
  "renderComponentToFilesystem": [Function],
}
`;

exports[`amplify render tests concat and conditional transform should render child component with data bound concatenation 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  Text,
  TextProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type ChildComponentWithDataBoundConcatenationProps =
  Partial<ButtonProps> & {
    textValue?: String;
  } & {
    overrides?: EscapeHatchProps | undefined | null;
  };
export default function ChildComponentWithDataBoundConcatenation(
  props: ChildComponentWithDataBoundConcatenationProps
): React.ReactElement {
  const { textValue, overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Button {...rest} {...getOverrideProps(overrides, \\"Button\\")}>
      <Text {...getOverrideProps(overrides, \\"Button.Text\\")}>{\`\${
        buttonUser?.firstname || \\"Harrison\\"
      }\${\\" \\"}\${buttonUser?.lastname || \\"Spain\\"}\`}</Text>
    </Button>
  );
}
"
`;

exports[`amplify render tests concat and conditional transform should render child component with static concatenation 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  Text,
  TextProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type ChildComponentWithStaticConcatenationProps =
  Partial<ButtonProps> & {
    overrides?: EscapeHatchProps | undefined | null;
  };
export default function ChildComponentWithStaticConcatenation(
  props: ChildComponentWithStaticConcatenationProps
): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Button {...rest} {...getOverrideProps(overrides, \\"Button\\")}>
      <Text
        {...getOverrideProps(overrides, \\"Button.Text\\")}
      >{\`\${\\"Concatenate\\"}\${\\" \\"}\${\\"Me!\\"}\`}</Text>
    </Button>
  );
}
"
`;

exports[`amplify render tests concat and conditional transform should render component with concatenation prop 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import { User } from \\"../models\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type CustomButtonProps = Partial<ButtonProps> & {
  width?: Number;
  buttonUser?: User;
  buttonColor?: String;
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function CustomButton(
  props: CustomButtonProps
): React.ReactElement {
  const {
    width,
    buttonUser,
    buttonColor,
    overrides: overridesProp,
    ...rest
  } = props;
  const overrides = { ...overridesProp };
  return (
    <Button
      label={\`\${buttonUser?.firstname || \\"Harrison\\"}\${\\" \\"}\${
        buttonUser?.lastname || \\"Spain\\"
      }\`}
      labelWidth={width}
      {...rest}
      {...getOverrideProps(overrides, \\"Button\\")}
    ></Button>
  );
}
"
`;

exports[`amplify render tests concat and conditional transform should render component with conditional prop 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import { User } from \\"../models\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type CustomButtonProps = Partial<ButtonProps> & {
  width?: Number;
  buttonUser?: User;
  buttonColor?: String;
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function CustomButton(
  props: CustomButtonProps
): React.ReactElement {
  const {
    width,
    buttonUser,
    buttonColor,
    overrides: overridesProp,
    ...rest
  } = props;
  const overrides = { ...overridesProp };
  return (
    <Button
      label={\`\${buttonUser?.firstname || \\"Harrison\\"}\${\\" \\"}\${
        buttonUser?.lastname || \\"Spain\\"
      }\`}
      labelWidth={width}
      disabled={
        buttonUser?.isLoggedIn && buttonUser?.isLoggedIn === true ? true : false
      }
      prompt={
        buttonUser?.age && buttonUser?.age > 18
          ? \`\${buttonUser?.firstname}\${\\", cast your vote.\\"}\`
          : \\"Sorry you cannot vote\\"
      }
      backgroundColor={
        buttonUser?.isLoggedIn && buttonUser?.isLoggedIn === true
          ? buttonUser?.loggedInColor
          : buttonUser?.loggedOutColor
      }
      {...rest}
      {...getOverrideProps(overrides, \\"Button\\")}
    ></Button>
  );
}
"
`;

exports[`amplify render tests custom render config should render ES5 1`] = `
"var __assign =
  (this && this.__assign) ||
  function () {
    __assign =
      Object.assign ||
      function (t) {
        for (var s, i = 1, n = arguments.length; i < n; i++) {
          s = arguments[i];
          for (var p in s)
            if (Object.prototype.hasOwnProperty.call(s, p)) t[p] = s[p];
        }
        return t;
      };
    return __assign.apply(this, arguments);
  };
var __rest =
  (this && this.__rest) ||
  function (s, e) {
    var t = {};
    for (var p in s)
      if (Object.prototype.hasOwnProperty.call(s, p) && e.indexOf(p) < 0)
        t[p] = s[p];
    if (s != null && typeof Object.getOwnPropertySymbols === \\"function\\")
      for (var i = 0, p = Object.getOwnPropertySymbols(s); i < p.length; i++) {
        if (
          e.indexOf(p[i]) < 0 &&
          Object.prototype.propertyIsEnumerable.call(s, p[i])
        )
          t[p[i]] = s[p[i]];
      }
    return t;
  };
/* eslint-disable */
import React from \\"react\\";
import { Button, View, getOverrideProps } from \\"@aws-amplify/ui-react\\";
export default function ViewWithButton(props) {
  var overridesProp = props.overrides,
    rest = __rest(props, [\\"overrides\\"]);
  var overrides = __assign({}, overridesProp);
  return React.createElement(
    View,
    __assign({}, rest, getOverrideProps(overrides, \\"View\\")),
    React.createElement(
      Button,
      __assign(
        { color: \\"#ff0000\\", width: \\"20px\\" },
        getOverrideProps(overrides, \\"View.Button\\")
      )
    )
  );
}
"
`;

exports[`amplify render tests custom render config should render JSX 1`] = `
"var __rest =
  (this && this.__rest) ||
  function (s, e) {
    var t = {};
    for (var p in s)
      if (Object.prototype.hasOwnProperty.call(s, p) && e.indexOf(p) < 0)
        t[p] = s[p];
    if (s != null && typeof Object.getOwnPropertySymbols === \\"function\\")
      for (var i = 0, p = Object.getOwnPropertySymbols(s); i < p.length; i++) {
        if (
          e.indexOf(p[i]) < 0 &&
          Object.prototype.propertyIsEnumerable.call(s, p[i])
        )
          t[p[i]] = s[p[i]];
      }
    return t;
  };
/* eslint-disable */
import React from \\"react\\";
import { Button, View, getOverrideProps } from \\"@aws-amplify/ui-react\\";
export default function ViewWithButton(props) {
  const { overrides: overridesProp } = props,
    rest = __rest(props, [\\"overrides\\"]);
  const overrides = Object.assign({}, overridesProp);
  return (
    <View {...rest} {...getOverrideProps(overrides, \\"View\\")}>
      <Button
        color=\\"#ff0000\\"
        width=\\"20px\\"
        {...getOverrideProps(overrides, \\"View.Button\\")}
      ></Button>
    </View>
  );
}
"
`;

exports[`amplify render tests custom render config should render common JS 1`] = `
"\\"use strict\\";
var __rest =
  (this && this.__rest) ||
  function (s, e) {
    var t = {};
    for (var p in s)
      if (Object.prototype.hasOwnProperty.call(s, p) && e.indexOf(p) < 0)
        t[p] = s[p];
    if (s != null && typeof Object.getOwnPropertySymbols === \\"function\\")
      for (var i = 0, p = Object.getOwnPropertySymbols(s); i < p.length; i++) {
        if (
          e.indexOf(p[i]) < 0 &&
          Object.prototype.propertyIsEnumerable.call(s, p[i])
        )
          t[p[i]] = s[p[i]];
      }
    return t;
  };
var __importDefault =
  (this && this.__importDefault) ||
  function (mod) {
    return mod && mod.__esModule ? mod : { default: mod };
  };
Object.defineProperty(exports, \\"__esModule\\", { value: true });
/* eslint-disable */
const react_1 = __importDefault(require(\\"react\\"));
const ui_react_1 = require(\\"@aws-amplify/ui-react\\");
function ViewWithButton(props) {
  const { overrides: overridesProp } = props,
    rest = __rest(props, [\\"overrides\\"]);
  const overrides = Object.assign({}, overridesProp);
  return react_1.default.createElement(
    ui_react_1.View,
    Object.assign(
      {},
      rest,
      (0, ui_react_1.getOverrideProps)(overrides, \\"View\\")
    ),
    react_1.default.createElement(
      ui_react_1.Button,
      Object.assign(
        { color: \\"#ff0000\\", width: \\"20px\\" },
        (0, ui_react_1.getOverrideProps)(overrides, \\"View.Button\\")
      )
    )
  );
}
exports.default = ViewWithButton;
"
`;

exports[`amplify render tests declarations should render declarations 1`] = `
"import React from \\"react\\";
import { EscapeHatchProps, FlexProps } from \\"@aws-amplify/ui-react\\";
export declare type ProfileProps = Partial<FlexProps> & {
    overrides?: EscapeHatchProps | undefined | null;
};
export default function Profile(props: ProfileProps): React.ReactElement;
"
`;

exports[`amplify render tests default value should render bound default value 1`] = `
Object {
  "componentText": "/* eslint-disable */
import React from \\"react\\";
import {
  EscapeHatchProps,
  Text,
  TextProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type BoundDefaultValueProps = Partial<TextProps> & {
  label?: String;
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function BoundDefaultValue(
  props: BoundDefaultValueProps
): React.ReactElement {
  const { label, overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Text {...rest} {...getOverrideProps(overrides, \\"Text\\")}>
      {label || \\"Bound Default\\"}
    </Text>
  );
}
",
  "declaration": undefined,
  "renderComponentToFilesystem": [Function],
}
`;

exports[`amplify render tests default value should render collection default value 1`] = `
Object {
  "componentText": "/* eslint-disable */
import React from \\"react\\";
import {
  Collection,
  CollectionProps,
  EscapeHatchProps,
  Text,
  TextProps,
  getOverrideProps,
  useDataStoreBinding,
} from \\"@aws-amplify/ui-react\\";
import { User } from \\"../models\\";

export type CollectionDefaultValueProps = Partial<CollectionProps<any>> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function CollectionDefaultValue(
  props: CollectionDefaultValueProps
): React.ReactElement {
  const { items, overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  const user =
    items !== undefined
      ? items
      : useDataStoreBinding({
          type: \\"collection\\",
          model: User,
        }).items;
  return (
    <Collection
      items={user || []}
      {...rest}
      {...getOverrideProps(overrides, \\"Collection\\")}
    >
      {(item, index) => (
        <Text {...getOverrideProps(overrides, \\"Collection.Text\\")}>
          {item.username || \\"Collection Default Value\\"}
        </Text>
      )}
    </Collection>
  );
}
",
  "declaration": undefined,
  "renderComponentToFilesystem": [Function],
}
`;

exports[`amplify render tests default value should render simple and bound default value 1`] = `
Object {
  "componentText": "/* eslint-disable */
import React from \\"react\\";
import {
  EscapeHatchProps,
  Text,
  TextProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type SimpleAndBoundDefaultValueProps = Partial<TextProps> & {
  label?: String;
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function SimpleAndBoundDefaultValue(
  props: SimpleAndBoundDefaultValueProps
): React.ReactElement {
  const {
    label = \\"Simple Double Default\\",
    overrides: overridesProp,
    ...rest
  } = props;
  const overrides = { ...overridesProp };
  return (
    <Text {...rest} {...getOverrideProps(overrides, \\"Text\\")}>
      {label || \\"Bound Double Default\\"}
    </Text>
  );
}
",
  "declaration": undefined,
  "renderComponentToFilesystem": [Function],
}
`;

exports[`amplify render tests default value should render simple default value 1`] = `
Object {
  "componentText": "/* eslint-disable */
import React from \\"react\\";
import {
  EscapeHatchProps,
  Text,
  TextProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type SimplePropertyBindingDefaultValueProps = Partial<TextProps> & {
  label?: String;
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function SimplePropertyBindingDefaultValue(
  props: SimplePropertyBindingDefaultValueProps
): React.ReactElement {
  const {
    label = \\"Default Binding Property\\",
    overrides: overridesProp,
    ...rest
  } = props;
  const overrides = { ...overridesProp };
  return (
    <Text {...rest} {...getOverrideProps(overrides, \\"Text\\")}>
      {label}
    </Text>
  );
}
",
  "declaration": undefined,
  "renderComponentToFilesystem": [Function],
}
`;

exports[`amplify render tests sample code snippet tests should generate a sample code snippet for components 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  CustomButton,
  CustomButtonProps,
  EscapeHatchProps,
  View,
  ViewProps,
  findChildOverrides,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type ViewWithButtonProps = Partial<ViewProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function ViewWithButton(
  props: ViewWithButtonProps
): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <View padding-left {...rest} {...getOverrideProps(overrides, \\"View\\")}>
      <CustomButton
        color=\\"#ff0000\\"
        width=\\"20px\\"
        buttonText=\\"Click Me\\"
        {...findChildOverrides(props.overrides, \\"CustomButton\\")}
      ></CustomButton>
    </View>
  );
}
"
`;

exports[`amplify render tests should render navigation actions 1`] = `
Object {
  "componentText": "/* eslint-disable */
import React from \\"react\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  Flex,
  FlexProps,
  Heading,
  HeadingProps,
  findChildOverrides,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type SiteHeaderProps = Partial<FlexProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function SiteHeader(props: SiteHeaderProps): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  const { invokeAction } = useActions({
    openAmplifyDocs: {
      type: \\"Navigation.Open\\",
      parameters: { href: \\"docs.amplify.aws\\" },
    },
    redirectToFooter: {
      type: \\"Navigation.Redirect\\",
      parameters: { href: \\"#footer-id\\", replaceHistory: true },
    },
    navigateToFAQPage: {
      type: \\"Navigation.Redirect\\",
      parameters: { href: \\"/faq\\" },
    },
    reloadPage: { type: \\"Navigation.Refresh\\" },
  });
  return (
    <Flex
      direction=\\"row\\"
      justifyContent=\\"space-between\\"
      {...rest}
      {...getOverrideProps(overrides, \\"Flex\\")}
    >
      <Heading
        level={1}
        children=\\"Title\\"
        {...findChildOverrides(props.overrides, \\"Heading\\")}
      ></Heading>
      <Button
        variation=\\"primary\\"
        children=\\"Open Amplify Docs\\"
        onClick={invokeAction(\\"openAmplifyDocs\\")}
        {...getOverrideProps(overrides, \\"Flex.Button\\")}
      ></Button>
      <Button
        variation=\\"primary\\"
        children=\\"Navigate to FAQ Page\\"
        onClick={invokeAction(\\"navigateToFAQPage\\")}
        {...getOverrideProps(overrides, \\"Flex.Button\\")}
      ></Button>
      <Button
        variation=\\"primary\\"
        children=\\"Reload Page\\"
        onClick={invokeAction(\\"reloadPage\\")}
        {...getOverrideProps(overrides, \\"Flex.Button\\")}
      ></Button>
      <Button
        variation=\\"primary\\"
        children=\\"Redirect To Footer (No History Update)\\"
        onClick={invokeAction(\\"redirectToFooter\\")}
        {...getOverrideProps(overrides, \\"Flex.Button\\")}
      ></Button>
    </Flex>
  );
}
",
  "declaration": undefined,
  "renderComponentToFilesystem": [Function],
}
`;

exports[`amplify render tests should render parsed fixed values 1`] = `
Object {
  "componentText": "/* eslint-disable */
import React from \\"react\\";
import {
  EscapeHatchProps,
  Input,
  InputProps,
  View,
  ViewProps,
  findChildOverrides,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type ParsedFixedValuesProps = Partial<ViewProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function ParsedFixedValues(
  props: ParsedFixedValuesProps
): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <View
      id=\\"parsed-fixed-values\\"
      {...rest}
      {...getOverrideProps(overrides, \\"View\\")}
    >
      <Input
        id=\\"string-value\\"
        value=\\"raw string value\\"
        {...findChildOverrides(props.overrides, \\"Input\\")}
      ></Input>
      <Input
        id=\\"number-value\\"
        value=\\"67548\\"
        {...findChildOverrides(props.overrides, \\"Input\\")}
      ></Input>
      <Input
        id=\\"parsed-number-value\\"
        value={67548}
        {...findChildOverrides(props.overrides, \\"Input\\")}
      ></Input>
      <Input
        id=\\"boolean-value\\"
        value=\\"true\\"
        {...findChildOverrides(props.overrides, \\"Input\\")}
      ></Input>
      <Input
        id=\\"parsed-boolean-value\\"
        value={true}
        {...findChildOverrides(props.overrides, \\"Input\\")}
      ></Input>
      <Input
        id=\\"json-value\\"
        value='{\\"foo\\": \\"bar\\"}'
        {...findChildOverrides(props.overrides, \\"Input\\")}
      ></Input>
      <Input
        id=\\"parsed-json-value\\"
        value={{ foo: \\"bar\\" }}
        {...findChildOverrides(props.overrides, \\"Input\\")}
      ></Input>
      <Input
        id=\\"array-value\\"
        value=\\"[1,2,3]\\"
        {...findChildOverrides(props.overrides, \\"Input\\")}
      ></Input>
      <Input
        id=\\"parsed-array-value\\"
        value={[1, 2, 3]}
        {...findChildOverrides(props.overrides, \\"Input\\")}
      ></Input>
      <Input
        id=\\"null-value\\"
        value=\\"null\\"
        {...findChildOverrides(props.overrides, \\"Input\\")}
      ></Input>
      <Input
        id=\\"parsed-null-value\\"
        value={null}
        {...findChildOverrides(props.overrides, \\"Input\\")}
      ></Input>
    </View>
  );
}
",
  "declaration": undefined,
  "renderComponentToFilesystem": [Function],
}
`;

exports[`amplify render tests theme should render the theme 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import { createTheme } from \\"@aws-amplify/ui-react\\";
export default createTheme({
  name: \\"MyTheme\\",
  tokens: {
    components: {
      alert: {
        backgroundColor: \\"hsl(210, 5%, 90%)\\",
        padding: \\"0.75rem 1rem\\",
        info: { backgroundColor: \\"hsl(220, 85%, 85%)\\" },
        error: { backgroundColor: \\"hsl(0, 75%, 85%)\\" },
        warning: { backgroundColor: \\"hsl(30, 75%, 85%)\\" },
        success: { backgroundColor: \\"hsl(130, 75%, 85%)\\" },
      },
    },
  },
  overrides: [
    {
      colorMode: \\"dark\\",
      tokens: {
        colors: { black: { value: \\"#fff\\" }, white: { value: \\"#000\\" } },
      },
    },
  ],
});
"
`;

exports[`amplify render tests theme should render the theme with ES5 1`] = `
"import { createTheme } from \\"@aws-amplify/ui-react\\";
export default createTheme({
  name: \\"MyTheme\\",
  tokens: {
    components: {
      alert: {
        backgroundColor: \\"hsl(210, 5%, 90%)\\",
        padding: \\"0.75rem 1rem\\",
        info: { backgroundColor: \\"hsl(220, 85%, 85%)\\" },
        error: { backgroundColor: \\"hsl(0, 75%, 85%)\\" },
        warning: { backgroundColor: \\"hsl(30, 75%, 85%)\\" },
        success: { backgroundColor: \\"hsl(130, 75%, 85%)\\" },
      },
    },
  },
  overrides: [
    {
      colorMode: \\"dark\\",
      tokens: {
        colors: { black: { value: \\"#fff\\" }, white: { value: \\"#000\\" } },
      },
    },
  ],
});
"
`;

exports[`amplify render tests theme should render the theme with TSX 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import { createTheme } from \\"@aws-amplify/ui-react\\";
export default createTheme({
  name: \\"MyTheme\\",
  tokens: {
    components: {
      alert: {
        backgroundColor: \\"hsl(210, 5%, 90%)\\",
        padding: \\"0.75rem 1rem\\",
        info: { backgroundColor: \\"hsl(220, 85%, 85%)\\" },
        error: { backgroundColor: \\"hsl(0, 75%, 85%)\\" },
        warning: { backgroundColor: \\"hsl(30, 75%, 85%)\\" },
        success: { backgroundColor: \\"hsl(130, 75%, 85%)\\" },
      },
    },
  },
  overrides: [
    {
      colorMode: \\"dark\\",
      tokens: {
        colors: { black: { value: \\"#fff\\" }, white: { value: \\"#000\\" } },
      },
    },
  ],
});
"
`;

exports[`amplify render tests user specific attributes should render user specific attributes 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  Flex,
  FlexProps,
  Image,
  ImageProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type ProfileProps = Partial<FlexProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function Profile(props: ProfileProps): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  const {
    attributes: {
      username,
      picture: userImage,
      [\\"custom:favorite_icecream\\"]: customUserAttributeIcecream,
    },
  } = useAuthenticatedUser();
  return (
    <Flex {...rest} {...getOverrideProps(overrides, \\"Flex\\")}>
      <Image
        src={userImage}
        {...getOverrideProps(overrides, \\"Flex.Image\\")}
      ></Image>
      <Button
        label={username}
        {...getOverrideProps(overrides, \\"Flex.Button\\")}
      ></Button>
      <Button
        label={customUserAttributeIcecream}
        {...getOverrideProps(overrides, \\"Flex.Button\\")}
      ></Button>
    </Flex>
  );
}
"
`;
